Fix controls width on mobile

--- a/src/styles/components/_youtube.scss
+++ b/src/styles/components/_youtube.scss
@@ -108,6 +108,7 @@
     padding: 0 20px;
 
     @include responsive(mobile) {
+      width: 100vw;
       padding: 0px 10px 0px;
     }
 
